fix package overlapping on hover

--- a/_sass/new-app.scss
+++ b/_sass/new-app.scss
@@ -662,7 +662,7 @@ section#packages {
     transition: all 0.2s ease-in-out;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
 
       .lower {
         a {
